Added more detail on the PetStore: included the domain layer from the Microsoft eShops example. 2) Added a git ignore.
