# PetStore.Common/Controllers/Command/CommandController.GENERATED.cs
@@ -1,6 +1,6 @@
 //----------------------
 // <auto-generated>
-//     Generated using the NSwag toolchain v13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v11.0.0.0)) (http://NSwag.org)
+//     Generated using the NSwag toolchain v13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v12.0.0.0)) (http://NSwag.org)
 // </auto-generated>
 //----------------------
 
@@ -18,71 +18,156 @@ namespace Petstore.Swagger.Io.Common.Command
 {
     using System = global::System;
 
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v11.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v12.0.0.0))")]
     [Microsoft.AspNetCore.Mvc.Route("v1")]
     public abstract class QueryControllerBase : Microsoft.AspNetCore.Mvc.ControllerBase
     {
         /// <summary>List all pets</summary>
         /// <param name="limit">How many items to return at one time (max 100)</param>
         /// <returns>A paged array of pets</returns>
-        [Microsoft.AspNetCore.Mvc.HttpGet, Microsoft.AspNetCore.Mvc.Route("pets", Name = "listPets")]
-        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> PetsGet([Microsoft.AspNetCore.Mvc.FromQuery] int? limit, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
+        [Microsoft.AspNetCore.Mvc.HttpGet, Microsoft.AspNetCore.Mvc.Route("pets")]
+        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> ListPets([Microsoft.AspNetCore.Mvc.FromQuery] int? limit, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
     
         /// <summary>Info for a specific pet</summary>
         /// <param name="petId">The id of the pet to retrieve</param>
         /// <returns>Expected response to a valid request</returns>
-        [Microsoft.AspNetCore.Mvc.HttpGet, Microsoft.AspNetCore.Mvc.Route("pets/{petId}", Name = "showPetById")]
-        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> PetsGet(string petId, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
+        [Microsoft.AspNetCore.Mvc.HttpGet, Microsoft.AspNetCore.Mvc.Route("pets/{petId}")]
+        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> ShowPetById([Microsoft.AspNetCore.Mvc.ModelBinding.BindRequired] string petId, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
     
     }
     
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v11.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v12.0.0.0))")]
     [Microsoft.AspNetCore.Mvc.Route("v1")]
     public abstract class CommandControllerBase : Microsoft.AspNetCore.Mvc.ControllerBase
     {
         /// <summary>Create a pet</summary>
+        /// <param name="body">A Pet object we wish to create</param>
         /// <returns>Null response</returns>
-        [Microsoft.AspNetCore.Mvc.HttpPost, Microsoft.AspNetCore.Mvc.Route("pets", Name = "createPets")]
-        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> Pets(System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
+        [Microsoft.AspNetCore.Mvc.HttpPost, Microsoft.AspNetCore.Mvc.Route("pets")]
+        public abstract System.Threading.Tasks.Task<System.Net.Http.HttpResponseMessage> CreatePet([Microsoft.AspNetCore.Mvc.FromBody] [Microsoft.AspNetCore.Mvc.ModelBinding.BindRequired] Pet body, System.Threading.CancellationToken cancellationToken = default(System.Threading.CancellationToken));
     
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v11.0.0.0)")]
+    /// <summary>List of all errors you'll encounter with PetStore</summary>
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v12.0.0.0)")]
+    public enum PetStoreErrorValue
+    {
+        [System.Runtime.Serialization.EnumMember(Value = @"Could not create a Pet")]
+        Could_not_create_a_Pet = 0,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Pet cannot be null")]
+        Pet_cannot_be_null = 1,
+    
+    }
+    
+    /// <summary>Type of Pet</summary>
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v12.0.0.0)")]
+    public enum PetType
+    {
+        [System.Runtime.Serialization.EnumMember(Value = @"Cat")]
+        Cat = 0,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Dog")]
+        Dog = 1,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Sloth")]
+        Sloth = 2,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Monkey")]
+        Monkey = 3,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Goat")]
+        Goat = 4,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Bat")]
+        Bat = 5,
+    
+        [System.Runtime.Serialization.EnumMember(Value = @"Rock")]
+        Rock = 6,
+    
+    }
+    
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v12.0.0.0)")]
     public partial class Pet 
     {
-        [Newtonsoft.Json.JsonProperty("id", Required = Newtonsoft.Json.Required.Always)]
-        public long Id { get; set; }
+        /// <summary>Resource ID. Unique and readonly.</summary>
+        [Newtonsoft.Json.JsonProperty("resourceID", Required = Newtonsoft.Json.Required.Always)]
+        public System.Guid ResourceID { get; set; }
     
         [Newtonsoft.Json.JsonProperty("name", Required = Newtonsoft.Json.Required.Always)]
-        [System.ComponentModel.DataAnnotations.Required(AllowEmptyStrings = true)]
         public string Name { get; set; }
     
-        [Newtonsoft.Json.JsonProperty("tag", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public string Tag { get; set; }
+        [Newtonsoft.Json.JsonProperty("type", Required = Newtonsoft.Json.Required.Always)]
+        [Newtonsoft.Json.JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public PetType Type { get; set; }
     
+        private System.Collections.Generic.IDictionary<string, object> _additionalProperties = new System.Collections.Generic.Dictionary<string, object>();
+    
+        [Newtonsoft.Json.JsonExtensionData]
+        public System.Collections.Generic.IDictionary<string, object> AdditionalProperties
+        {
+            get { return _additionalProperties; }
+            set { _additionalProperties = value; }
+        }
+    
+        public string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, new Newtonsoft.Json.JsonSerializerSettings());
+        }
+    
+        public static Pet FromJson(string data)
+        {
+            return Newtonsoft.Json.JsonConvert.DeserializeObject<Pet>(data, new Newtonsoft.Json.JsonSerializerSettings());
+        }
     
     }
     
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v11.0.0.0)")]
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v12.0.0.0)")]
     public partial class Pets : System.Collections.ObjectModel.Collection<Pet>
     {
+        public string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, new Newtonsoft.Json.JsonSerializerSettings());
+        }
+    
+        public static Pets FromJson(string data)
+        {
+            return Newtonsoft.Json.JsonConvert.DeserializeObject<Pets>(data, new Newtonsoft.Json.JsonSerializerSettings());
+        }
     
     }
     
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v11.0.0.0)")]
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "10.5.1.0 (Newtonsoft.Json v12.0.0.0)")]
     public partial class Error 
     {
         [Newtonsoft.Json.JsonProperty("code", Required = Newtonsoft.Json.Required.Always)]
         public int Code { get; set; }
     
         [Newtonsoft.Json.JsonProperty("message", Required = Newtonsoft.Json.Required.Always)]
-        [System.ComponentModel.DataAnnotations.Required(AllowEmptyStrings = true)]
         public string Message { get; set; }
     
+        private System.Collections.Generic.IDictionary<string, object> _additionalProperties = new System.Collections.Generic.Dictionary<string, object>();
+    
+        [Newtonsoft.Json.JsonExtensionData]
+        public System.Collections.Generic.IDictionary<string, object> AdditionalProperties
+        {
+            get { return _additionalProperties; }
+            set { _additionalProperties = value; }
+        }
+    
+        public string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, new Newtonsoft.Json.JsonSerializerSettings());
+        }
+    
+        public static Error FromJson(string data)
+        {
+            return Newtonsoft.Json.JsonConvert.DeserializeObject<Error>(data, new Newtonsoft.Json.JsonSerializerSettings());
+        }
     
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v11.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v12.0.0.0))")]
     public partial class SwaggerResponse
     {
         public int StatusCode { get; private set; }
@@ -96,7 +181,7 @@ namespace Petstore.Swagger.Io.Common.Command
         }
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v11.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.13.1.0 (NJsonSchema v10.5.1.0 (Newtonsoft.Json v12.0.0.0))")]
     public partial class SwaggerResponse<TResult> : SwaggerResponse
     {
         public TResult Result { get; private set; }
