# PetStore.Common/OpenAPI/petstore.yaml
@@ -1,17 +1,19 @@
-swagger: "2.0"
+# ______    _     _____ _                 
+# | ___ \  | |   /  ___| |                
+# | |_/ /__| |_  \ `--.| |_ ___  _ __ ___ 
+# |  __/ _ \ __|  `--. \ __/ _ \| '__/ _ \
+# | | |  __/ |_  /\__/ / || (_) | | |  __/
+# \_|  \___|\__| \____/ \__\___/|_|  \___|
+#                                         
+                                       
+openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Swagger Petstore
   license:
     name: MIT
-host: petstore.swagger.io
-basePath: /v1
-schemes:
-  - http
-consumes:
-  - application/json
-produces:
-  - application/json
+servers:
+  - url: http://petstore.swagger.io/v1
 paths:
   /pets:
     get:
@@ -24,33 +26,48 @@ paths:
           in: query
           description: How many items to return at one time (max 100)
           required: false
-          type: integer
-          format: int32
+          schema:
+            type: integer
+            format: int32
       responses:
-        "200":
+        '200':
           description: A paged array of pets
           headers:
             x-next:
-              type: string
               description: A link to the next page of responses
-          schema:
-            $ref: '#/definitions/Pets'
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Pets"
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     post:
       summary: Create a pet
-      operationId: createPets
+      operationId: createPet
       tags:
         - command
+      requestBody:
+        description: A Pet object we wish to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
       responses:
-        "201":
+        '201':
           description: Null response
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /pets/{petId}:
     get:
       summary: Info for a specific pet
@@ -62,42 +79,79 @@ paths:
           in: path
           required: true
           description: The id of the pet to retrieve
-          type: string
-      responses:
-        "200":
-          description: Expected response to a valid request
           schema:
-            $ref: '#/definitions/Pets'
+            type: string
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-definitions:
-  Pet:
-    type: "object"
-    required:
-      - id
-      - name
-    properties:
-      id:
-        type: integer
-        format: int64
-      name:
-        type: string
-      tag:
-        type: string
-  Pets:
-    type: array
-    items:
-      $ref: '#/definitions/Pet'
-  Error:
-    type: "object"
-    required:
-      - code
-      - message
-    properties:
-      code:
-        type: integer
-        format: int32
-      message:
-        type: string
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+components:
+  schemas:
+    
+    PetStoreErrorValue:
+      description: List of all errors you'll encounter with PetStore
+      type: string
+      enum:
+        - Could not create a Pet
+        - Pet cannot be null
+    
+    PetType:
+      description: Type of Pet
+      type: string
+      enum:
+        - Cat
+        - Dog
+        - Sloth
+        - Monkey
+        - Goat
+        - Bat
+        - Rock
+    
+    Pet:
+      type: object
+      required:
+        - resourceID
+        - name
+        - type
+      properties:
+        resourceID:
+          description: Resource ID. Unique and readonly.
+          type: string
+          format: uuid
+          readOnly: true
+        name:
+          type: string
+        type:
+          $ref: "#/components/schemas/PetType"
+    
+    Pets:
+      type: array
+      items:
+        $ref: "#/components/schemas/Pet"
+    
+    Error:
+      type: object
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
+
+
+# APPENDIX:
+#
+# ASCI Font URL: https://patorjk.com/software/taag/#p=display&f=Doom&t=Test
+#
